dex-clients/dex-clientapp/deploypatch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex-client
spec:
  template:
    spec:
      containers:
        - name: dex-client
          args:
            - --issuer
            - http://dex.11.22.33.44.xip.io/dex
            - --redirect-uri
            - http://dex-clientapp.11.22.33.44.xip.io/callback
            - --listen
            - http://0.0.0.0:5555
            - --client-secret
            - example-secret
